# zsh-autocomplete-rs-proto

./: .gitignore  AGENTS.md  Cargo.toml  _typos.toml  test-popup.sh
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  dependabot-auto-merge.yml
benches/: daemon_bench.rs  fuzzy_bench.rs  handoff_bench.rs  hyperfine_baseline.sh  input_bench.rs  protocol_bench.rs  rendering_bench.rs  startup_bench.rs  text_processing_bench.rs
benches/helpers/: mod.rs
dev/bench/: data.js
docs/: README.md  development-roadmap.md  implementation-guide.md  shell-popup-sandbox-analysis.md  side-effects-comparison.md  zsh-autocomplete-analysis.md
shell/: _zacrs_compsys.zsh  _zacrs_gather.zsh  _zacrs_util.zsh  zsh-autocomplete-rs.plugin.zsh
src/: app.rs  candidate.rs  cli.rs  client.rs  config.rs  daemon.rs  fuzzy.rs  handoff.rs  input.rs  lib.rs  main.rs  protocol.rs  tty.rs
src/ui/: mod.rs  popup.rs  render.rs  theme.rs
