[package]
name = "zsh-autocomplete-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
autobenches = false

[lib]
name = "zsh_autocomplete_rs"
path = "src/lib.rs"

[[bin]]
name = "zsh-autocomplete-rs"
path = "src/main.rs"

[dependencies]
libc = "0.2"
crossterm = "0.29"
nucleo-matcher = "0.3"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
termwiz = "0.23"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "fuzzy_bench"
harness = false

[[bench]]
name = "text_processing_bench"
harness = false

[[bench]]
name = "startup_bench"
harness = false

[[bench]]
name = "daemon_bench"
harness = false

[[bench]]
name = "handoff_bench"
harness = false

[[bench]]
name = "input_bench"
harness = false

[[bench]]
name = "protocol_bench"
harness = false

[[bench]]
name = "rendering_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1
